# ragstral

./: README.md
demo/: README.md  package.json  pnpm-lock.yaml
demo/src/lib/: types.ts
demo/src/lib/components/: ChatInput.svelte  Discussion.svelte
demo/src/lib/components/ui/textarea/: textarea.svelte
demo/src/lib/utils/: index.ts  ragstral.ts  simpleChat.ts
demo/src/routes/: +page.svelte
demo/src/routes/api/chain-of-thought/: +server.ts
demo/src/routes/api/gpt_simple/: +server.ts
demo/src/routes/api/mistral_simple/: +server.ts
demo/src/routes/api/rag/: +server.ts
indexer/: .gitignore  README.md  __init__.py  config.py  example.sh  pipeline.py  pyproject.toml  requirements.txt
indexer/services/: __init__.py  code_preprocessor.py  embedding_service.py  github_fetcher.py  pinecone_indexer.py
